scripts/deployment/k8s/ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: qing
  name: qing-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/permanent-redirect-code: '308'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    traefik.ingress.kubernetes.io/frontend-entry-points: https
spec:
  tls:
    - hosts:
        - api.chenyunlong.cn
        - config.chenyunlong.cn
        - admin.chenyunlong.cn
    - secretName: chenyunlong-tls
  rules:
    - host: api.chenyunlong.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 9527
    - host: config.chenyunlong.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: config-app
                port:
                  number: 8888
    - host: admin.chenyunlong.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-app
                port:
                  number: 10086
